# diagnose-w-confidence

./: .gitignore  CHANGES.md  README.md  README_RELIABILITY.md  confidence.py  config.env  deploy_vllm_with_logits.py  pyproject.toml  start.sh
config/: default.json
src/diagnose_w_confidence/client/: prompt.py
src/diagnose_w_confidence/server/: confidence.py  confidence_original.py  confidence_torch.py  preprocessing.py
tests/: test_confidence.py  test_confidence_torch.py  test_logits_spying.py  test_preprocessing.py
